@@ -5,15 +5,18 @@ AUX doc-extensions.patch 598 SHA256 af0a930523bccb31a7b9ab0ac0fb28fc635177b8d01f
 AUX fabric-1.4.2-git_tags_docs.patch 1046 SHA256 f2158f350de5ba110cb7ffb0cafae7c1e960b9f76cde9e96c2465f7f3b262563 SHA512 006ef53206dab157b5baff48d3852b94e9966586670db872b9a7d5519a550f017897dda6e99153072dc29c6172779959e63a804e5ce8db7e7f65101c1d519be5 WHIRLPOOL ff43cae4fa8c20fa6262b849f1eb610a7f523f848cde3b5b513cb331d988ad12a255caaa175d634d18bec7fa7de8d863363cfd19f8cd242686dcddd0cef568dc
 DIST Fabric-1.10.0.tar.gz 208969 SHA256 edb2702b4655600f0a49a97e654c79f5b21490ce30f77d1313dd851f0b60335a SHA512 991341dfb3f71e938c2a2e30f5bc158be84cb1600ab64c4f7c5c49decd0a38bc57615f9e07edfbed70d9ca796592d7c1a4f7f3e25a40c4d31049015df928b2e3 WHIRLPOOL c07ba33bd6e7832fd5527ec14e206d74a6a2b983dbb49a43d972f31e15e22f9642df4809adff72f43f92fca5c1d758a4ac540ed87e22f46adc25094b2aa4ccb3
 DIST Fabric-1.10.1.tar.gz 209750 SHA256 ab9c54e9496c89ae96ed4aa669e01c792376d75a7389ec90d4292282cc26f008 SHA512 a00f46ac28c61d20575af9f34e4e2bc54a79e836c29b395bbdf58538b6c75523a7ec6f3f40caf0f270d2ec8b0500806b14e80c4ed4d2077e39f4dbdd773d8637 WHIRLPOOL 88b5865ec80ff923292b0ba4a868a06fa5cc0f68b3a8ab2fbfb68f17422b9b60a365ea3b14b5f04929425bbcf9350acbc72dc1733200c18a80d954c3c1762ce9
+DIST Fabric-1.10.2.tar.gz 212942 SHA256 666a3da92273532d3a49dd1ac53e3d721c5ec2f2512cd7dddb7ce19e29e9f038 SHA512 3102616a8fbc6237df74eb9b506e95628487d2bb112a56826d388a943b6e8af926f4f174a8d8810b27b63e58d2018667d927795c6a5e53833a1d3fc87324b0af WHIRLPOOL f08af6300432655786692a99385f4cd4d8605ac3bd952dd198706bd975c737431df7aaa6dc2d737719ca029305cb3e3359876ac32702f3ad539b65a5ad5501fb
 EBUILD fabric-1.10.0-r1.ebuild 1925 SHA256 2a223e1c17e1e9c8a25583b3079dd53a9416568dd4cbbdb00007405cf34c20ad SHA512 bd911a67897a48450ae335c8d3310b4b5a61960fd00f23725e6b519c1cb4319a907a6a8cdc844f57a007ede9f1ef486496ea5d89b7a1b2f884f5a847d800e34a WHIRLPOOL a399aa2539fe1e4614827e4e57dbbd77b6320190960b7621d565f7aef2fa5872e086a7c96131d20d59d670542be35c348e4b8e05ea89c71cab02651620c50bb6
-EBUILD fabric-1.10.0.ebuild 1973 SHA256 495c0881b1ea47e26cf7f93dc4a7d45cd6003fc86caf6d3bf651548f7b638889 SHA512 0c55424a8a2d6fe3ca1955b87dcde4a578a2a32b355dddd0b9c50c36cb4a52707e801195f9e65ed8e8d2fb08fa2d93d7a0d9c0f7abf66f5e48a801576d58d9b1 WHIRLPOOL 419ae6405eebc3df3fe601519804001045c22aabe4a31c44a112286157b3ca21e80def80d33b1b82e799f730a0ab41d5f32af37dba144df8daf1e412ff39c317
 EBUILD fabric-1.10.1.ebuild 1851 SHA256 01e9b29ab079a17c6e2930b0eae9af4709a64bd33bebbd9e817341db107b24d3 SHA512 f128a3385f667086dea7efe99e8a152e4cb122e42d4d29496848f7cffaaa08750ff02ac59d60d2df2731b21b29d6586b62cebba1e446b3c305867ee32f89edde WHIRLPOOL cf24c6f70036ed7beed66bcf0afdf064961ce5967d7c3f22097673cd8a3cc744a6248af621138740939d25a58ded98cf80b6098b6c36075a12af080f97afffaa
-MISC ChangeLog 8789 SHA256 e967f890efd2643a5b48c0c2f8d803d0130fe8f347977ceb2829234a66c18891 SHA512 bbd1c9c72d3b9a245a13a6e8c1cd294409f983f1d3e58380f759b50d3e1bab9efccce2260d3231eba4da136f7b9e481c3fb925769c98220c5d7c1d4c5846b60c WHIRLPOOL 1e0048d5b6c637a95b2f24aaea01f91da109062b08ce630a72eb839a8ca3e857bef7617080111bde9d29e98542c260f9d153f3c25e8e43c22e83b5c68097fc50
+EBUILD fabric-1.10.2.ebuild 1878 SHA256 3fbee65d15b84cc5198f18b9d05f72c05d122df31393a02138652eb58aa07817 SHA512 45739b6fc75c94e978816db5f3e1e240998127d9dd93ba599c679291304cadefce1f28ee82b2ea39bc9cfa632bab4aa3ce72004aafa94182d03f61209e4ac2f8 WHIRLPOOL ad1f32fe1e24685afd647d9bb18243d867253a300bc53df6e7d865bd25d59e61aeb664bb621e982b059881aff9843123f71460e726f8ae15840489d384ef95cf
+MISC ChangeLog 8942 SHA256 a594917a8152d500cf5087976c3c00421c760dcdfa5a1f473393a20406d63e17 SHA512 f832546fadd4a535740dcc6387b9a0e897cd1021415af8de2432fc29be82701d25350a07ba0d5edbd39fb1284a4e5a379520b95c27b1c6bae7f47ab0066e6bb4 WHIRLPOOL 643f5315fa34ca80e19a631bfd4057a4434dcfa25decfe2a770a4645235b13c15aecba2ae64cc9f7d0bf2e161e7ba60405c17ced443a8f36b2c38a4933a180c0
 MISC metadata.xml 229 SHA256 3e4ac13baa3ece16df4c90c93ed406e87d61bfc4bed3f78682d45ce2b1281738 SHA512 74f6424417890077621ac6955e596ccb7da7ad26ccff9d556500390a91d2a4867c01c2ab56e0538fa9145371003ad3fbf8176d377ceafc044c1ba945fe4aa52e WHIRLPOOL 0c358e551fbabc3c800d834bc0358745add73a08e6643ddbdcb9db4311b794d185549192f262565d2b25bef4e3d059599640f55499db15e39c9452fbf211a506
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iEYEAREIAAYFAlTh+EIACgkQCaWpQKGI+9RFZACfUkY4oH5jemrYAFF03fKKSJl+
-K8EAn0kqwA7tJUWDT6rmECtGHB6SDhxc
-=jLq1
+iKYEAREIAGYFAlXBwqtfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldDdDQUM1OUY0ODkzMERBREU1NUQ1RjJBRkIy
+OEVDMjEzQjgwNzJCMEQACgkQso7CE7gHKw2wxQCfc+C2sxOgPKizTEjOE/c0jG+p
+PQwAn12QjnrEW4aqqpN+Eq0FxgtSf6N4
+=E5kb
 -----END PGP SIGNATURE-----
